# AER627-RoboCraft

./: .gitignore  README.md
ClawBotTest/ClawBotTest/src/: main.cpp
Project1/src/: main.cpp
Project1New/src/: main.cpp  vex_apriltag.cpp
Project2/src/: main.cpp
Project3/Matlab Trajectory Helpers/: TrajectoryGenerator.asv  TrajectoryGenerator.mlx  TrajectoryGeneratorJacobian.mlx  jacobian_trajectory.csv  pen.m  trajectory.csv
Project3/src/: main.cpp
Project3New/Project3New/src/: main.cpp
Project4/Project4/src/: main.cpp
Project4Rover/: CMakeLists.txt
Project4Rover/include/: Pose3D.h  apriltag.h  apriltag_pose.h  obstacle.h  potential_planner.h  rover_motor.h  rover_wheel.h  vex_apriltag_functions.h  vex_apriltag_types.h  vex_rover_motor.h
Project4Rover/src/: Pose3D.cpp  apriltag_aux.c  apriltag_pose.c  main.cpp  map_test.cpp  obstacle.cpp  potential_planner.cpp  rover_wheel.cpp  vex_rover_motor.cpp
april_test/.svn/: wc.db
april_test/include/: apriltag_aux.h
